# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  openclaw.plugin.json  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  tsconfig.json  vite.config.ts  vitest.setup.ts
.vision/: goal_alignment.md  product_requirements_document.md  product_vision.md
docs/: calendar-provider-setup.md  hermes-plugin.md  multi-user-and-strategies.md  openclaw-plugin-release-checklist.md  openclaw-plugin.md  preferences-system.md  public-repo-workflow.md  release-cheat-sheet.md
e2e/: flagship-flows.spec.ts  knowledge-graph.spec.ts  mobile-responsive.spec.ts  shell-regressions.spec.ts
ios-companion/: .release.env.example  AGENTS.md  CRITICAL_XCODE_PROJECT_RULES.md  README.md  project.yml
openclaw-plugin/: .gitignore  README.md  openclaw.plugin.json  package-lock.json  package.json  (+1 more)
plugins/forge-hermes/: .gitignore  MANIFEST.in  README.md  __init__.py  config.py  entity_conversation_playbooks.md  plugin.yaml  psyche_entity_playbooks.md  pyproject.toml  schemas.py  skill.md  skill.md.bak-20260415  tools.py
plugins/forge-hermes/forge_hermes/: __init__.py  catalog.py  config.py  entity_conversation_playbooks.md  entity_conversation_playbooks.md.bak-20260415  psyche_entity_playbooks.md  skill.md  tools.py
plugins/forge-hermes/forge_hermes/runtime/: package.json
plugins/forge-hermes/forge_hermes/runtime/server/migrations/: 006_work_adjustments.sql  008_calendar_execution.sql  015_multi_user_and_strategies.sql  016_health_companion.sql  018_preference_catalogs.sql  019_wiki_memory.sql  024_questionnaires.sql  025_ai_model_connections.sql  038_data_management_settings.sql  039_life_force_and_action_points.sql  040_screen_time_domain.sql  042_movement_boxes.sql  046_work_item_hierarchy.sql  052_agent_identity_tightening.sql  057_gamification_catalog_cleanup.sql
plugins/forge-hermes/forge_hermes/scripts/: ensure-runtime.mjs
plugins/forge-hermes/scripts/: build-package-runtime.mjs  ensure-runtime.mjs  install.sh
plugins/forge-hermes/tests/: test_startup_context.py  test_tool_calls.py
src/: app.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs  openapi.rs  routes.rs  sse.rs
(+719 files in other folders)
